# Newton-Raphson

./: CMakeLists.txt  CUDA_functions.cu  CUDA_functions.cuh  Polynomial.cpp  Polynomial.cu  Polynomial.cuh  Polynomial.h  Root.cpp  Root.cu  Root.cuh  Root.h  Scale.cpp  Scale.cu  Scale.cuh  Scale.h  getColorMap.cuh  main.cpp  main.cu
